<resources>
    <string name="app_name">All Government Jobs 2018</string>
    <string name="twitter_api_consumer_key"></string>
    <string name="twitter_api_consumer_secret_key"></string>
    <string name="google_server_key">AIzaSyA5OFjgY1JLoVqrumkJ-0uCXH6wCsNL9_s</string>
    <string name="google_android_key">AIzaSyCCaRiBx3wOenIiEcNUGrv6mop56DjVXpY</string>
    <string name="instagram_access_token"></string>
    <string name="pinterest_access_token"></string>
    <string name="facebook_access_token"></string>
    <string name="soundcloud_id"></string>
    <string name="woocommerce_consumer_key"></string>
    <string name="woocommerce_consumer_secret"></string>
    <string name="woocommerce_url"></string>
    <string name="onesignal_app_id">46f08217-8a7e-4e68-9841-81905e89fa84</string>
    <string name="onesignal_google_project_number">839915624615</string>
    <string name="about_text"><![CDATA[   
    <b>Version 1.0</b>
    <br><br>Thank you for downloading our app Please Rate us 5 Star<br><br>
    <i>By Only Android Devs&#174;</i>
    ]]></string>
    <string name="google_play_license"></string>
    <string name="product_id"></string>
    <string name="admob_banner_id">ca-app-pub-7958747011170486/8957759054</string>
    <string name="admob_interstitial_id">ca-app-pub-7958747011170486/1434492255</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="profile_image">Profile image</string>
    <string name="message">Message</string>
    <string name="tweet_share_header">\'s tweet</string>
    <string name="ok">Ok</string>
    <string name="feed_title_value">Feed title</string>
    <string name="feed_link_value">Feed description</string>
    <string name="feed_description_value">Feed link</string>
    <string name="btn_video">Play video</string>
    <string name="btn_audio">Play audio</string>
    <string name="video_no_live_title">On a break</string>
    <string name="video_no_live">No live streams available now</string>
    <string name="video_live">Select a stream</string>
    <string name="play_button">Play</string>
    <string name="video_share_begin">"I just saw this video: "</string>
    <string name="video_share_middle">" in the \""</string>
    <string name="video_share_end">\" app</string>
    <string name="video_subtitle_start">"Uploaded at "</string>
    <string name="video_subtitle_end">" by "</string>
    <string name="webview_title">Web</string>
    <string name="web_share_begin">"Look what I saw in the \""</string>
    <string name="web_share_end">"\"app: "</string>
    <string name="item_del_text">You are about to delete all your favorites</string>
    <string name="item_del_confirmation">I know</string>
    <string name="no_favorites">Your can add (more) favorites by opening an item and selecting \"favorite\"</string>
    <string name="favorite_success">The item has been added</string>
    <string name="favorite_duplicate">This item has already been added</string>
    <string name="favorite_menu_delete">Delete</string>
    <string name="settings_general_summary">Username and password information</string>
    <string name="settings_general">General</string>
    <string name="settings_showmenu_summary">Yes/No</string>
    <string name="settings_showmenu">Show side menu on start</string>
    <string name="settings_fontsize_summary">Preferred text size for articles and posts</string>
    <string name="settings_fontsize">Text size</string>
    <string name="settings_fontsize_xl">Extra Large</string>
    <string name="settings_fontsize_l">Large</string>
    <string name="settings_fontsize_m">Default</string>
    <string name="settings_fontsize_s">Small</string>
    <string name="settings_fontsize_xs">Extra Small</string>
    <string name="settings_other_summary">Other information</string>
    <string name="settings_other">Other</string>
    <string name="settings_aboutus_summary">Information about our application</string>
    <string name="settings_aboutus">About</string>
    <string name="settings_rate_summary">Help other users enjoy this application</string>
    <string name="settings_rate">Rate this app</string>
    <string name="settings_billing_summary">Manage your In-App purchases</string>
    <string name="settings_billing">In-App Products.</string>
    <string name="settings_purchase_summary">Removes ads and unlocks more content</string>
    <string name="settings_purchase">Unlock extra features</string>
    <string name="settings_restore_purchase_success">Previous purchases have been restored.</string>
    <string name="settings_purchase_success">Previous purchases have been restored.</string>
    <string name="settings_purchase_fail">Purchase failed.</string>
    <string name="dialog_purchase_title">Content locked.</string>
    <string name="dialog_purchase">In order to view this content, you need to unlock the full version by making a one time purchase.\n\nThis will also remove advertisements throughout the app.</string>
    <string name="wordpress_subtitle_start">"Published "</string>
    <string name="wordpress_subtitle_end">" by "</string>
    <string name="related">Related to this</string>
    <string name="volume_low">Turn your volume up!</string>
    <string name="now_playing">Now playing</string>
    <string name="toggle_fullscreen">Toggle Fullscreen</string>
    <string name="notification_playing">Playing audio - Live Stream</string>
    <string name="audio_notification">Background media playback</string>
    <string name="error_retry">Failed to connect to stream... </string>
    <string name="error_retry_later">Please try again in a few seconds... </string>
    <string name="radio_playing_other">Already playing another station. Press play again to play this station instead.</string>
    <string name="image_descr">Image</string>
    <string name="set">Set</string>
    <string name="save">Save</string>
    <string name="tumblr_share_begin">Check out this post I saw in</string>
    <string name="saved">Saved at:</string>
    <string name="set_confirm">Are you sure you would like to set this image as wallpaper?</string>
    <string name="set_success">You have set a new Wallpaper!</string>
    <string name="duration">%1$d:%2$02d</string>
    <string name="toast_track_added">Added to the playlist. Touch again to play now.</string>
    <string name="playback_view_time">%1$02d:%2$02d</string>
    <string name="playback_view_title">&lt;b>%1$s&lt;/b> - %2$s</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="cart_success">Added to cart</string>
    <string name="order_success">Thank you for your order!</string>
    <string name="order_success_subtitle">We have received your order!</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="view_cart">View cart</string>
    <string name="cart_title">Shopping Cart</string>
    <string name="cart_failed">We were unable to checkout your items..</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="latest_products">Latest Products</string>
    <string name="tag">Tag</string>
    <string name="weight">Weight</string>
    <string name="sku">SKU</string>
    <string name="tax_notice">Tax included</string>
    <string name="dimensions">Dimensions</string>
    <string name="reviews">%2d Rating(s)</string>
    <string name="no_reviews">No reviews yet</string>
    <string name="order_items">abcabc</string>
    <string name="order_item">dvdvd</string>
    <string name="no_user">Who are you?</string>
    <string name="no_user_subtitle">Login with your store account to view your orders.</string>
    <string name="no_order">You have no previous orders. Any orders you make while signed in will show up here.</string>
    <string name="shop">Shop</string>
    <string name="greeting">Hi %1s!</string>
    <string name="sale">Sale</string>
    <string name="quantity">%2d pcs</string>
    <string name="quantity_picker">Select quantity</string>
    <string name="cart_empty_title">Your cart is empty</string>
    <string name="cart_empty_subtitle">Start shopping to fill your cart with items</string>
    <string name="review">Reviews</string>
    <string name="details">Details</string>
    <string name="description">Description</string>
    <string name="varations">Options</string>
    <string name="varations_missing">Something went wrong with loading product variations</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_credentials">Your email or password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_sign_out_success">You have been signed out</string>
    <string name="background_audio">Playing audio</string>
    <string name="download_permission_explaination">In order to download files, you need to grant us permission to your storage.\n\nAfter granting us access, you may go ahead and download the file.</string>
    <string name="download_permission_grant">Grant permission</string>
    <string name="download_unavailable">You can not download this content</string>
    <string name="download_failed">Download failed</string>
    <string name="download_open_failed">No app to handle file</string>
    <string name="action_download">Download</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="wallpaper_success">Wallpaper has been set!</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="invalid_configuration">Configuration could not be loaded</string>
    <string name="share_header">Share</string>
    <string name="about_header">About</string>
    <string name="favorite_button">Favorite</string>
    <string name="open_button">Open</string>
    <string name="textview_date">"Date: "</string>
    <string name="loading">Loading..</string>
    <string name="empty_textview">Error loading data</string>
    <string name="no_results">No results</string>
    <string name="no_results_subtitle">Nothing to see here.</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="comments">Comments</string>
    <string name="share">Share</string>
    <string name="info">Info</string>
    <string name="refresh">Refresh</string>
    <string name="already_loading">We are already loading some new content!</string>
    <string name="intent_failed">Failed to start external application.</string>
    <string name="search_hint">Search</string>
    <string name="search">Search</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="permissions_required">You need to accept all required permissions to access this content.</string>
    <string name="dialog_connection_title">Servers unreachable</string>
    <string name="dialog_connection_description">Please be Slower. we are already loading some new Posts.</string>
    <string name="dialog_internet_title">No internet</string>
    <string name="dialog_internet_description">You seem to have no internet connection, this app requires internet to get the latest content.\n\nYou can continue to see your favorite/offline items!</string>
    <string name="title_activity_woo_commerce_login">Sign in</string>
</resources>