<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="1dip">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerInside"
        android:src="@drawable/placeholder"
        android:contentDescription="@string/image_descr" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnShare"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/tumblr_button_background"
                android:gravity="center"
                android:paddingBottom="@dimen/spacing_xxs"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="@dimen/spacing_xxs"
                android:text="@string/share"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSet"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/tumblr_button_background"
                android:gravity="center"
                android:paddingBottom="@dimen/spacing_xxs"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="@dimen/spacing_xxs"
                android:text="@string/set"
                android:textColor="#ffffff" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/tumblr_button_background"
                android:gravity="center"
                android:paddingBottom="@dimen/spacing_xxs"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="@dimen/spacing_xxs"
                android:text="@string/save"
                android:textColor="#ffffff" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>