<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:elevation="8dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/light_gray"
        android:minHeight="@dimen/image_height_youtube"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:background="@color/grey_light"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingBottom="@dimen/spacing_m"
            android:paddingLeft="@dimen/spacing_xl"
            android:paddingRight="@dimen/spacing_xl">

            <!-- description -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/price_holder"
                    android:layout_toStartOf="@+id/price_holder"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/empty_textview"
                        android:textColor="@color/dark_gray"
                        android:textDirection="locale"
                        android:textSize="@dimen/textsize_xl" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RatingBar
                            android:id="@+id/rating"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:isIndicator="true"
                            android:progressBackgroundTint="#FFA500"
                            android:progressTint="#FFA500"
                            android:secondaryProgressTint="#FFA500"
                            android:stepSize="0.1" />

                        <TextView
                            android:id="@+id/rating_count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/spacing_s"
                            android:layout_marginStart="@dimen/spacing_s"
                            android:text="@string/reviews"
                            android:textColor="@color/dim_gray"
                            android:textSize="@dimen/textsize_xxs" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_s">

                        <TextView
                            android:id="@+id/price_original_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/spacing_s"
                            android:layout_marginRight="@dimen/spacing_s"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:textColor="#d32f2f"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/price_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="$12"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_xxs"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@string/empty_textview"
                        android:textColor="@color/dim_gray"
                        android:textDirection="locale" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/price_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="17dp"
                    android:layout_marginRight="17dp"
                    android:layout_marginTop="24dp"
                    android:foregroundGravity="bottom"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:src="@drawable/ic_heart"
                        android:textColor="@color/myAccentColor" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_l"
            android:paddingTop="@dimen/spacing_l"
            android:paddingBottom="@dimen/spacing_m"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="@dimen/spacing_xl"
            android:paddingRight="@dimen/spacing_xl">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textDirection="locale"
                android:textSize="@dimen/textsize_l"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:linksClickable="true"
                android:text="@string/empty_textview"
                android:textColor="@color/dim_gray"
                android:textDirection="locale"
                android:textSize="@dimen/textsize_m" />

            <View
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/spacing_l"
                android:layout_height="1dp"
                android:background="@color/btnGray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_l"
                android:text="@string/details"
                android:textDirection="locale"
                android:textSize="@dimen/textsize_l"
                android:textStyle="bold" />

            <TableLayout
                android:id="@+id/properties_grid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/spacing_l">

            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/spacing_xl"
            android:paddingRight="@dimen/spacing_xl"
            android:paddingTop="@dimen/spacing_l"
            android:paddingBottom="@dimen/spacing_m">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_shield" />

            <LinearLayout
                android:layout_marginLeft="@dimen/spacing_xl"
                android:layout_marginStart="@dimen/spacing_xl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Purchase with Confidence"
                    android:textDirection="locale"
                    android:textSize="@dimen/textsize_m"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Enjoy Free Returns. Up to 2 Years of Warranty. Fast Customer Support. Safe Shopping and Checkout"
                    android:textDirection="locale"
                    android:textSize="@dimen/textsize_s" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/related_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_l"
            android:paddingTop="@dimen/spacing_l"
            android:paddingBottom="@dimen/spacing_m"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/spacing_xl"
                android:paddingRight="@dimen/spacing_xl"
                android:autoLink="all"
                android:linksClickable="true"
                android:paddingBottom="@dimen/spacing_l"
                android:text="@string/related"
                android:textDirection="locale"
                android:textStyle="bold"
                android:textSize="@dimen/textsize_l" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/related_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingLeft="@dimen/spacing_xl"
                android:paddingRight="@dimen/spacing_xl"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tax_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_xl"
            android:text="@string/tax_notice"
            android:textSize="@dimen/textsize_m" />

    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/cart_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/image"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="-32dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/play_button"
        android:elevation="24dp"
        android:src="@drawable/ic_bag"
        app:fabSize="normal" />

</RelativeLayout>

